logics moved to service layer from controller